fixed jpg to webp main logo and scrollbar

--- a/frontend/src/components/content/AvailableSlots.module.css
+++ b/frontend/src/components/content/AvailableSlots.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 180px 20px 100px;
+  padding: 130px 20px 100px;
   margin: 0 auto;
   max-width: 1280px;
 }
